--- a/src/index.css
+++ b/src/index.css
@@ -473,7 +473,8 @@ body {
 .hero-buttons {
     display: flex;
     flex-wrap: wrap;
-    gap: 12px;
+    gap: 24px;
+    margin-top: 60px;
     margin-bottom: 40px;
 }
 
