--- a/src/pages/MvpPage.css
+++ b/src/pages/MvpPage.css
@@ -207,7 +207,7 @@
 
 .mvp-row {
     display: grid;
-    grid-template-columns: 50px 2fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 50px 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
     padding: 14px 18px;
     align-items: center;
     font-size: 13px;
